--- a/package.json
+++ b/package.json
@@ -16,24 +16,32 @@
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@react-oauth/google": "^0.12.1",
+    "@react-three/drei": "^9.88.3",
+    "@react-three/fiber": "^8.14.6",
     "@rsuite/icons": "^1.3.0",
     "@splinetool/react-spline": "^2.2.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.157.0",
+    "@use-gesture/react": "^10.3.1",
     "@vis.gl/react-google-maps": "^1.5.1",
     "bootstrap": "^5.3.3",
     "framer-motion": "^4.1.17",
     "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "maath": "^0.10.8",
     "number-counter": "^1.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-intersection-observer": "^8.32.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
@@ -47,7 +55,12 @@
     "styled-components": "^5.3.6",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.6",
-    "web-vitals": "^2.1.4"
+    "three": "^0.157.0",
+    "three-stdlib": "^2.27.2",
+    "uuid-by-string": "^4.0.0",
+    "valtio": "^1.10.3",
+    "web-vitals": "^2.1.4",
+    "wouter": "^3.6.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -77,6 +90,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
